slight adjustments to UI wording

--- a/popup.html
+++ b/popup.html
@@ -171,7 +171,7 @@
 
     <div class="feedback-section">
         <div class="feedback-text">
-            I'm soooo curious how people discovered this extension. If you don't mind, please take a moment to fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLScA6MQL52-36gDu8D0_Kpgezrw_yYQyPCzcSmR7DzWzQYTsMg/viewform?usp=header" target="_blank" class="feedback-link">quick form!</a>
+            I'm a little curious how people discovered this extension. If you don't mind, please take a moment to fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLScA6MQL52-36gDu8D0_Kpgezrw_yYQyPCzcSmR7DzWzQYTsMg/viewform?usp=header" target="_blank" class="feedback-link">quick form!</a>
         </div>
     </div>
 </body>
